controller/errors

command to run: gcc -o dino_duck dino_duck.c usbkeyboard.c -lusb-1.0





dino_duck.c: In function 'main':
dino_duck.c:46:49: error: 'USB_VID' undeclared (first use in this function)
     pad = libusb_open_device_with_vid_pid(NULL, USB_VID, USB_PID);
                                                 ^
dino_duck.c:46:49: note: each undeclared identifier is reported only once for each function it appears in
dino_duck.c:46:58: error: 'USB_PID' undeclared (first use in this function)
     pad = libusb_open_device_with_vid_pid(NULL, USB_VID, USB_PID);
                                                          ^
dino_duck.c:75:9: error: unknown type name 'bool'
         bool want_jump = (y_axis == 0x00 && y == GROUND_Y);
         ^
dino_duck.c:76:9: error: unknown type name 'bool'
         bool want_duck = (y_axis == 0xFF && y == GROUND_Y);
         ^
root@de1-soc:~/test_gamepad# gcc -o dino_jump3 dino_duck.c usbkeyboard.c -lusb-1.0
dino_duck.c: In function 'main':
dino_duck.c:46:49: error: 'USB_VID' undeclared (first use in this function)
     pad = libusb_open_device_with_vid_pid(NULL, USB_VID, USB_PID);
                                                 ^
dino_duck.c:46:49: note: each undeclared identifier is reported only once for each function it appears in
dino_duck.c:46:58: error: 'USB_PID' undeclared (first use in this function)
     pad = libusb_open_device_with_vid_pid(NULL, USB_VID, USB_PID);
                                                          ^
dino_duck.c:75:9: error: unknown type name 'bool'
         bool want_jump = (y_axis == 0x00 && y == GROUND_Y);
         ^
dino_duck.c:76:9: error: unknown type name 'bool'
         bool want_duck = (y_axis == 0xFF && y == GROUND_Y);


root@de1-soc:~/test_gamepad# lsusb
Bus 001 Device 003: ID 0079:0011 DragonRise Inc. Gamepad
Bus 001 Device 002: ID 0424:2512 Standard Microsystems Corp. USB 2.0 Hub
Bus 001 Device 001: ID 1d6b:0002 Linux Foundation 2.0 root hub
root@de1-soc:~/test_gamepad# lsusb
Bus 001 Device 002: ID 0424:2512 Standard Microsystems Corp. USB 2.0 Hub
Bus 001 Device 001: ID 1d6b:0002 Linux Foundation 2.0 root hub
root@de1-soc:~/test_gamepad# lsusb
Bus 001 Device 004: ID 0079:0011 DragonRise Inc. Gamepad
Bus 001 Device 002: ID 0424:2512 Standard Microsystems Corp. USB 2.0 Hub


USB read error: -1

/tmp/ccXga9qt.o: In function `main':
motion1.c:(.text.startup+0x5c): undefined reference to `wait_for_vsync'
motion1.c:(.text.startup+0x60): undefined reference to `read_controller'
motion1.c:(.text.startup+0xc4): undefined reference to `show_game_over_screen'
motion1.c:(.text.startup+0xca): undefined reference to `start_pressed'
collect2: error: ld returned 1 exit status
